css/styles.css
/* ... */
.main-navigation {
  position: relative;
  width: 1200px;
  padding: 0;
  font-weight: 700;
  color: #333333;
  line-height: 26px;
  min-height: 56px;
}

.main-header-logo {
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.site-navigation {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  width: 1200px;
  list-style: none;
  margin: 0;
  padding: 0;
  min-height: 56px;
}

.site-navigation>li {
  display: block;
  width: 239px;
  padding: 15px 0px;
  letter-spacing: normal;
  line-height: 26px;
}

.nav-info,
.nav-gallery {
  text-align: left;
}

.nav-housing,
.nav-map {
  text-align: right;
}

.nav-info {
  margin-left: 72px;
}

.nav-gallery {
  margin-left: 2px;
}

.nav-map {
  margin-left: 0px;
}

.nav-housing {
  margin-left: 5px;
  margin-right: 72px
}

.nav-gallery {
  margin-right: auto;
}

.site-navigation a {
  color: #000000;
}

a.current {
  color: #766357;
}

.site-navigation a:hover,
.site-navigation a:focus {
  color: #81b3d2;
}

.site-navigation a:active {
  color: rgba(0, 0, 0, 0.3);
}

.intro-picture {
  width: 1200px;
  height: 508px;
  margin-bottom: 59px;
  background-color: #908484;
  background:
    url("../img/intro-mask.svg") no-repeat 0px 452px,
    url("../img/background-photo.jpg") no-repeat 0px -83px
}

.welcome-text-picture {
  margin-top: 77px;
}

.heading-regular {
  font-size: 21px;
  font-weight: 700;
  color: #000000;
}

.slogan {
  width: 500px;
  height: 48px;
  line-height: 26px;
  margin: auto;
  margin-bottom: 35px;
}

.benefits-intro-text {
  width: 500px;
  margin: auto;
  margin-bottom: 54px;
  letter-spacing: 0.1px;
}

.benefits-item-wrapper {
  width: 1200px;
  min-height: 256px;
  display: flex;
  background-color: #81b3d2;
  justify-content: center;
}

.benefits-list {
  width: 1200px;
  list-style: none;
  padding: 0px;
  display: flex;
  flex-wrap: wrap;
}

.benefits-item {
  width: 400px;
  padding-bottom: 15px;
}

.benefit-picture {
  width: 800px;
  height: 256px;
  margin: 0;
  padding: 0;
  background-color: #E29686;
}

.benefit-backward {
  order: 2;
}

.features-list {
  width: 1200px;
  padding: 0;
  margin-top: 141px;
  margin-bottom: 69px;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.features-item {
  width: 400px;
  position: relative;
  padding: 0 57px;
}

.features-item p {
  width: 290px;
}

.features-icon::before {
  content: "";
}

.housing-icon::before {
  bottom: 108%;
  left: 41%;
  position: absolute;
  width: 75px;
  height: 72px;
  background: url("../img/housing-icon.svg") no-repeat;
}

.eat-icon::before {
  bottom: 108%;
  left: 41%;
  position: absolute;
  width: 74px;
  height: 70px;
  background: url("../img/eat-icon.svg") no-repeat;
}

.souvenirs-icon::before {
  bottom: 108%;
  left: 43%;
  -webkit-transform: translateX(-2px);
  transform: translateX(-2px);
  position: absolute;
  width: 64px;
  height: 76px;
  background: url("../img/souvenir-icon.svg") no-repeat;
}

.heading-white {
  font-weight: 700;
  color: #ffffff;
}

.heading-huge {
  width: 305px;
  margin: auto;
  margin-top: 51px;
  margin-bottom: 22px;
  font-size: 30px;
  line-height: 36px;
  font-weight: 700;
  text-align: center;
  color: #000000;
}

.blue-back {
  padding: 24px 48px;
  color: #ffffff;
  background-color: #81b3d2;
}

.blue-back h3 {
  width: 305px;
}

.grey-back {
  padding: 0px 60px;
  padding-top: 26px;
  background-color: #eeeeee;
  width: 400px;
  min-height: 255px;
}

.grey-back h3 {
  width: 280px;
}

.benefit-heading {
  padding: 0 61px;
  margin-bottom: 24px;
}

.benefit-description {
  margin-top: 21px;
  min-height: 80px;
}

.blue-back p {
  margin-top: 23px;
}

.button {
  font: inherit;
  font-weight: 700;
  color: #ffffff;
  text-transform: uppercase;
  text-align: center;
  vertical-align: middle;
  background-color: #766357;
  border: none;
}

.button:hover {
  background-color: #604e43;
}

.button:active {
  background-color: #503e33;
  color: rgba(255, 255, 255, 0.3);
}

.button-blue {
  background-color: #81b3d2;
}

.button-blue:hover {
  background-color: #669ec0;
}

.button-blue:active {
  background-color: #5496bd;
}

.search-footer-wrapper {
  width: 1200px;
  position: relative;
}

.map-background {
  position: relative;
  width: 1200px;
  height: 593px;
  background-image: url("../img/map.png")
}

.search-intro-text {
  width: 463px;
  line-height: 26px;
  margin: auto;
  margin-bottom: 132px;
}

.form-roll-button {
  position: absolute;
  z-index: 3;
  right: 50%;
  bottom: 100%;
  -webkit-transform: translateX(50%);
  transform: translateX(50%);
  width: 568px;
  height: 86px;
  font-size: 21px;
  font-weight: 700;
  line-height: 26px;
}

.form-show {
  -webkit-animation: fade-in-down 0.7s;
  animation: fade-in-down 0.7s;
}

.form-close {
  display: none;
}

.form-close-animated {
  -webkit-animation: fade-out-up 0.8s;
  animation: fade-out-up 0.8s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.form-error {
  -webkit-animation: shake 0.6s;
  animation: shake 0.6s;
}

.map-iframe {
  position: absolute;
  right: 0px;
  border: none;
  z-index: 1;
}

@-webkit-keyframes fade-in-down {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -25%, 0);
    transform: translate3d(0, -25%, 0)
  }

  to {
    opacity: 1;
    -webkit-transform: translateZ(0);
    transform: translateZ(0)
  }
}

@keyframes fade-in-down {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -25%, 0);
    transform: translate3d(0, -25%, 0)
  }

  to {
    opacity: 1;
    -webkit-transform: translateZ(0);
    transform: translateZ(0)
  }
}

@-webkit-keyframes fade-out-up {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
    -webkit-transform: translate3d(0, -25%, 0);
    transform: translate3d(0, -25%, 0);
  }
}
/* ... */

